packages/ui-lib/src/styles/global.css
@import "tailwindcss";
@import "./themes/index.css";

html,
body {
  @apply bg-background text-on-background;
  transition: background-color 0.3s ease-in-out;
}

a:not(.as-text), a:not(.as-text):visited {
  @apply text-primary no-underline;
  text-decoration: none;
}
a:not(.as-text):hover {
  @apply text-primary-alt;
}
a.as-text, a.as-text:visited {
  color: inherit;
}

a.as-text.hover-text-primary:hover {
  @apply text-primary
}

h1 {
  @apply text-4xl font-semibold;
}
h2 {
  @apply text-3xl font-semibold;
}
h3 {
  @apply text-2xl font-semibold;
}
h4 {
  @apply text-xl font-semibold;
}
h5 {
  @apply text-lg font-semibold;
}
h6 {
  @apply text-base font-semibold;
}

small {
  @apply text-sm;
}

::-moz-selection { /* Code for Firefox */
  @apply text-on-tertiary bg-tertiary;
}

::selection {
  @apply text-on-tertiary bg-tertiary;
}

mark {
  @apply text-on-tertiary bg-tertiary;
}

